fixed about spacing

--- a/src/container/AboutUs/AboutUs.scss
+++ b/src/container/AboutUs/AboutUs.scss
@@ -59,6 +59,7 @@
 
     @media screen and (min-width: 1024px) {
       width: 40%;
+      padding-right: 2rem;
     }
 
     .app__aboutus-content_history-gallery {
